<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/year_input"
            app:layout_constraintBottom_toTopOf="@+id/spinner"
            app:layout_constraintStart_toStartOf="@+id/spinner" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="294dp"
            android:layout_height="55dp"
            android:layout_marginTop="84dp"
            android:layout_marginBottom="40dp"
            android:background="@drawable/spinner_bg"
            android:spinnerMode="dropdown"
            app:layout_constraintBottom_toTopOf="@+id/apr_input"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.518"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/apr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/apr_text"
            app:layout_constraintBottom_toTopOf="@+id/apr_input"
            app:layout_constraintStart_toStartOf="@+id/apr_input" />

        <TextView
            android:id="@+id/loan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loan_text"
            app:layout_constraintBottom_toTopOf="@+id/loan_input"
            app:layout_constraintStart_toStartOf="@+id/loan_input" />

        <EditText
            android:id="@+id/loan_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="280dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/loan_hint"
            android:inputType="number"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.508"
            app:layout_constraintStart_toStartOf="parent"
            />

        <TextView
            android:id="@+id/escrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/escrow_text"
            app:layout_constraintBottom_toTopOf="@+id/escrow_input"
            app:layout_constraintStart_toStartOf="@+id/escrow_input" />

        <EditText
            android:id="@+id/escrow_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/escrow_hint"
            android:inputType="numberDecimal"
            android:textSize="25sp"
            app:layout_constraintBottom_toTopOf="@+id/loan_input"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/apr_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:ems="10"
            android:hint="@string/apr_hint"
            android:inputType="numberDecimal"
            android:textSize="25sp"
            app:layout_constraintBottom_toTopOf="@+id/escrow_input"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.51"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/submitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginBottom="16dp"
            android:text="@string/submitButtonText"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:backgroundTint="#6BEA66"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/loan_input"
            app:layout_constraintTop_toBottomOf="@+id/loan_input"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/clearButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_toEndOf="@id/submitButton"
            android:text="@string/clearButtonText"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:backgroundTint="#ED4242"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/loan_input"
            app:layout_constraintTop_toBottomOf="@+id/loan_input"
            app:layout_constraintVertical_bias="1.0" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>